fix tests for gameSettings POST and PUT